--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!doctype html>
 <html>
   <head>
-    <title>Scaffold</title>
+    <title>Interactive Portfolio</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   </head>
   <body>
     <div id="app"></div>
-    <script src="bundle.js"></script>
   </body>
 </html>
