--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
   </head>
   <body>
     <div id="app"></div>
+    <h1></h1>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script type="text/javascript" src="src/app.js"></script>
   </body>
 </html>
