--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <div id="app"></div>
-    <h1></h1>
+    <h1>Exploring gentrification trends of Chicago neighborhoods</h1>
+    <h3>Click on a neighborhood to find out demographic and housing details</h3>
+    <p></p>
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script type="text/javascript" src="src/app.js"></script>
   </body>
