Done with area maps

--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
     <h1>Exploring gentrification trends of Chicago neighborhoods</h1>
     <h3>Click on a neighborhood to find out demographic and housing details</h3>
     <div class='big-container'>
-      <div id='main-map'></div>
+      <div id='left-side'>
+        <p>Map description</p>
+        <div id='main-map'></div>
+        <p>More description</p>
+      </div>
       <div class='comm-area'>
-        <p></p>
+        <h2 id='big-title'></h2>
         <div id='area-chart'></div>
       </div>
     </div>
