--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <br>
           <span>from 0 unit (Lincoln Park) to above 2000 units (Grand Boulevard).</span>
         </p>
-        <p id='main-map-data-source'>Data Source: Chicago Open Portal</p>
+        <p id='main-map-data-source'>Data Source: Chicago Open Data Portal</p>
         <div id='main-map'></div>
         <p></p>
       </div>
