Finishing it up

--- a/index.html
+++ b/index.html
@@ -46,10 +46,23 @@
         </p>
         <p id='main-map-data-source'>Data Source: Chicago Open Data Portal</p>
         <div id='main-map'></div>
-        <p></p>
+        <div class='footer'>
+          <p>
+            Claire Chi Nguyen, University of Chicago, CAPP '19
+            <a href="https://github.com/clairenguyen12">
+            <img src="src/github-logo.png" alt="Github Logo" height="15px" width="15px"></a>
+          </p>
+          <p>
+            Data Sources:
+            <a href="https://www.census.gov/programs-surveys/acs">U.S. Census Bureau American Community Survey, </a>
+            <a href="https://datahub.cmap.illinois.gov/dataset/community-data-snapshots-raw-data">Chicago Metropolitan Agency for Planning, </a>
+            <a href="https://data.cityofchicago.org/">Chicago Open Data Portal</a>
+          </p>
+        </div>
       </div>
       <div class='comm-area'>
         <h2 id='big-title'></h2>
+        <p id="comm-area-instruction">Please scroll down to see all 3 charts</p>
         <div id='area-chart'></div>
       </div>
     </div>
