--- a/index.html
+++ b/index.html
@@ -19,16 +19,13 @@
       On the other hand, gentrification also leads to lower crime rates and economic
       improvement in a neighborhood. Areas in Chicago that have been experiencing gentrification
       include Logan Square, Pilsen, Uptown, etc.
-      Please use the interactive map below to explore the demographic trends for a Chicago
-      neighborhood of your choice. You will be able to see how crime rates, median income,
-      and racial demographics of the neighborhood have changed over time and evaluate if it
-      has gone through gentrification or not.
     </p>
     <div id='instruction-box'>
       <p>
         Please use the interactive map below to explore the demographic trends for a Chicago
         neighborhood of your choice. When you hover your mouse over the map of Chicago's
-        affordable housing unit on the left, you can see how many affordable units that neighborhood has.
+        affordable housing on the left, you can see the name of the neighborhood and how many affordable
+        units that neighborhood has.
         Once you click on your neighborhood of interest, you will be able to see, on the right side,
         how crime rates, median income, and racial demographics of the neighborhood have changed over
         time and evaluate if it has gone through gentrification or not.
